2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* cpu.c, rtems/score/cpu.h: Move interrupt_stack_size field from CPU
	Table to Configuration Table. Eliminate CPU Table from all ports.
	Delete references to CPU Table in all forms.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/score/cpu.h: Moved most of the remaining CPU Table fields to
	the Configuration Table. This included pretasking_hook,
	predriver_hook, postdriver_hook, idle_task, do_zero_of_workspace,
	extra_mpci_receive_server_stack, stack_allocate_hook, and
	stack_free_hook. As a side-effect of this effort some multiprocessing
	code was made conditional and some style clean up occurred.

2007-05-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/cpu.h: Remove CPU_HAS_OWN_HOST_TO_NETWORK_ROUTINES.

2007-04-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/cpu.h:
	  Use Context_Control_fp* instead of void* for fp_contexts.
	  Eliminate evil casts.

2007-01-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Use uint_least16_t for
	Priority_Bit_map_control;

2006-11-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Remove unsigned64, signed64.

2006-01-16	Joel Sherrill <joel@OARcorp.com>

	* rtems/score/cpu.h: Part of a large patch to improve Doxygen output.
	As a side-effect, grammar and spelling errors were corrected, spacing
	errors were address, and some variable names were improved.

2005-11-08	Ralf Corsepius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Eliminate unsigned16, unsigned32.

2005-10-27	Ralf Corsepius <ralf.corsepius@rtems.org>

	* rtems/asm.h: Remove private version of CONCAT macros.
	Include <rtems/concat.h> instead.

2005-02-08	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Split out preinstallation rules.
	* preinstall.am: New (Split out from Makefile.am).

2005-02-04	Ralf Corsepius <ralf.corsepius@rtems.org>

	PR 754/rtems
	* rtems/asm.h: New (relocated from .).